/*
 * $Id: Changelog,v 1.444 2005-10-28 12:22:25 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-10-28 10:25 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com.br>
   * gtk/draw.c
     gtk/drawtext.c
     gtk/commond.c
     ! changed all call to &(HB_VM_STACK).Return to hb_stackReturnItem() under xharbour      
     
2005-10-28 10:20 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com.br>
   * gtk/window.c
     ! small fixes

2005-10-28 10:20 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
   * source/hhyper.prg
     * Added #define TRANSPARENT  1, which was removed from windows.ch 

2005-10-27 16:10 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
   * gtk/control.c
     * Small cleanup
   * gtk/draw.c
     * Functions, compatible with appropriates from Win32 version,
       has been implemented:
        OpenBitmap()
        OpenImage()
        DrawBitmap()
     * DeleteObject() is extended with pixbuf objects
   * gtk/drawwidg.prg
     * Class HBitmap has been implemented
   + gtk/hpanel.prg
   + gtk/hsayimg.prg
     + Two files added
   * gtk/hwgtk.h
     * HWGUI_PIXBUF headers added
   * gtk/menu_c.c
   * gtk/window.c
     ! Small fixes
   * gtk/Makefile
   * gtk/Makefile.linux
     * Changed due to the adding of new files

2005-10-27 11:10 UTC+0200 Alexey Myronenko <atzct@obukhov.kiev.ua>
   *utils/designer/resource/widgets.xml
     + added properties AUTOHSCROLL and JUSTIFY to edit control
   *source/hfrmtmpl.prg
     + added processing of AUTOHSCROLL clause

2005-10-26 16:55 UTC+0200 Alexey Myronenko <atzct@obukhov.kiev.ua>
   *utils/designer/designer.prg
   *utils/designer/hctrl.prg
     ! Now Designer allow adjust the controls to right and to bottom

2005-10-26 14:06 UTC+0200 Alexey Myronenko <atzct@obukhov.kiev.ua>
   *source/hcheck.prg
   *source/hcombo.prg
   *source/hcontrol.prg