@@ -1,5 +1,5 @@
 /*
- * $Id: Changelog,v 1.444 2005-10-28 12:22:25 lculik Exp $
+ * $Id: Changelog,v 1.445 2005-10-28 18:02:04 lculik Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,10 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2005-10-28 16:10 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com.br>
+   * gtk/window.c
+     ! reverted back to this morning version with small fix
+     
 2005-10-28 10:25 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com.br>
    * gtk/draw.c
      gtk/drawtext.c
